force-app/main/default/objects/OneCRM__Schedule__c/OneCRM__Schedule__c.object-meta.xml
<CustomObject>
    <label>Schedule</label>
    <nameField>
        <label>Schedules Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>