force-app/main/default/objects/OneCRM__Schedule__c/fields/OneCRM__Description__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>