force-app/main/default/objects/OneCRM__Schedule__c/fields/OneCRM__Name__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Name__c</fullName>
    <label>Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>