force-app/main/default/objects/OneCRM__Schedule__c/fields/OneCRM__Next_Time_To_Run__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Next_Time_To_Run__c</fullName>
    <label>Next Time To Run</label>
    <type>DateTime</type>
</CustomField>