force-app/main/default/objects/OneCRM__Schedule__c/fields/OneCRM__Properties__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Properties__c</fullName>
    <description>JSON object containing specific details about this schedule</description>
    <label>Properties</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>