force-app/main/default/objects/OneCRM__Schedule__c/fields/OneCRM__Relates_To__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Relates_To__c</fullName>
    <description>the object this schedule relates to</description>
    <label>Relates To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>