force-app/main/default/objects/OneCRM__Schedule__c/fields/OneCRM__Schedule_Rule__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Schedule_Rule__c</fullName>
    <label>Schedule Rule</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>