force-app/main/default/objects/OneCRM__Schedule__c/fields/OneCRM__Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Start_Date_Time__c</fullName>
    <label>Start Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>