force-app/main/default/objects/OneCRM__Schedule__c/fields/OneCRM__Status__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Status__c</fullName>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>