force-app/main/default/objects/OneCRM__Schedule__c/fields/OneCRM__Task_To_Run__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Task_To_Run__c</fullName>
    <description>the name of the class to run for this schedule</description>
    <label>Task To Run</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>